<resources>
    <string name="app_name">The Movie DB App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="connectivity_exception">No connectivity exception</string>
    <string name="api_url">https://api.themoviedb.org/3/</string>

    <!-- ERRORS -->
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_timeout">The server timeout has expired.</string>
    <string name="error_network">Error with your internet connection.</string>
    <string name="error_badrequest">You have made an incorrect request.</string>
    <string name="error_server">Error on the server.</string>
    <string name="error_info">Error information.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movies</string>
    <string name="serie">Serie</string>
    <string name="title">Title</string>
    <string name="rated">Rated</string>
    <string name="original_title">Original title</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="first_air_date">First air date</string>
    <string name="action_search">Search</string>

    <string-array name="category">
        <item>Select Categorie Movie</item>
        <item>Popular Movies</item>
        <item>Top Rated Movies</item>
        <item>UpComing Movies</item>
    </string-array>

    <string-array name="category_serie">
        <item>Select Series Category</item>
        <item>Popular Serie</item>
        <item>Top Rated Serie</item>
        <item>On The Air Serie</item>
    </string-array>

</resources>
